--- a/styles.css
+++ b/styles.css
@@ -10,13 +10,24 @@
   outline: 2px dashed red;
 }
 
+html {
+  font-size: 16px;
+  font-family: sans-serif;
+}
+
 body {
   margin: 0;
 }
 
-header #title {
+header {
+  display: flex; /* combined with childs margin: auto; centers title */
   width: 100%;
-  height: 10vh;
+  height: 15vh;
   background-color: var(--secondary-color);
-  color: var();
+  color: var(--secondary-accent-color);
+  font-weight: bold;
+}
+
+header h1 {
+  margin: auto;
 }
