--- a/styles.css
+++ b/styles.css
@@ -20,6 +20,7 @@ body {
 }
 
 header {
+  position: fixed;
   display: flex; /* combined with childs margin: auto; centers title */
   width: 100%;
   height: 15vh;
