--- a/styles.css
+++ b/styles.css
@@ -21,7 +21,10 @@ body {
 
 header {
   position: fixed;
+  /* top: 0; */
+
   display: flex; /* combined with childs margin: auto; centers title */
+
   width: 100%;
   height: 15vh;
   background-color: var(--secondary-color);
@@ -31,4 +34,20 @@ header {
 
 header h1 {
   margin: auto;
+}
+
+footer {
+  position: fixed;
+  bottom: 0;
+
+  background-color: var(--primary-accent-color);
+  width: 100%;
+  height: 15vh;
+  color: var(--secondary-accent-color);
+}
+
+footer ul {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
 }
