--- a/styles.css
+++ b/styles.css
@@ -50,4 +50,12 @@ footer ul {
   display: flex;
   justify-content: space-around;
   align-items: center;
+
+  list-style: none;
+  /* margin: 0; */
+  padding: 0;
+}
+
+footer ul img {
+  width: 25%;
 }
