--- a/styles.css
+++ b/styles.css
@@ -40,10 +40,22 @@ footer {
   position: fixed;
   bottom: 0;
 
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
   background-color: var(--primary-accent-color);
   width: 100%;
   height: 15vh;
   color: var(--secondary-accent-color);
+}
+
+nav {
+  outline: 2px darkblue dashed;
+  width: 80%;
+  max-width: 600px;
+  /* padding: 0; */
+  /* margin: 0; */
 }
 
 footer ul {
@@ -54,8 +66,19 @@ footer ul {
   list-style: none;
   /* margin: 0; */
   padding: 0;
+  margin: 0;
+  /* vertical-align: middle; */
+}
+
+footer li {
+  background-color: blueviolet;
+  text-align: center;
+  /* padding: 0; */
 }
 
 footer ul img {
   width: 25%;
+  min-width: 25px;
+  /* height: 25%; */
+  outline: yellow 2px solid;
 }
