--- a/styles.css
+++ b/styles.css
@@ -27,6 +27,7 @@ header {
 
   width: 100%;
   height: 15vh;
+  min-height: 2rem;
   background-color: var(--secondary-color);
   color: var(--secondary-accent-color);
   font-weight: bold;
