--- a/styles.css
+++ b/styles.css
@@ -47,6 +47,7 @@ footer {
   background-color: var(--primary-accent-color);
   width: 100%;
   height: 15vh;
+  min-height: 3rem;
   color: var(--secondary-accent-color);
 }
 
