--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,9 @@
 
 * {
   box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+
   outline: 2px dashed red;
 }
 
@@ -34,6 +37,11 @@ header {
 
 header h1 {
   margin: auto;
+}
+
+main {
+  color: var(--primary-color);
+  padding-top: 20vh;
 }
 
 footer {
@@ -75,11 +83,44 @@ footer li {
   background-color: blueviolet;
   text-align: center;
   /* padding: 0; */
+
+  /* width: 100%; */
+  /* height: 100%; */
 }
 
+/* obsolet */
 footer ul img {
-  width: 25%;
+  /* width: 25%;
   min-width: 25px;
   /* height: 25%; */
-  outline: yellow 2px solid;
+  /* outline: yellow 2px solid; */
+}
+
+.current {
+}
+
+footer li {
+  background-size: 25px;
+
+  min-width: 25px;
+  min-height: 25px;
+
+  /* color: white; */
+  /* background-color: white; */
+
+  /* object-fit: cover; */
+}
+
+.btn-home {
+  background-image: url(./assets/home.png);
+}
+.btn-bookmark {
+  background-image: url(./assets/bookmark_transparent.png);
+}
+.btn-profile {
+  background-image: url(./assets/profile.png);
+}
+
+li {
+  /* background-image: url(./assets/home.png); */
 }
