--- a/styles.css
+++ b/styles.css
@@ -24,6 +24,7 @@ body {
 
 header {
   position: fixed;
+  z-index: 1;
   /* top: 0; */
 
   display: flex; /* combined with childs margin: auto; centers title */
@@ -32,8 +33,8 @@ header {
   height: 15vh;
   min-height: 5rem;
   background-color: var(--secondary-color);
-  color: var(--secondary-accent-color);
   font-weight: bold;
+  color: white;
 }
 
 header h1 {
@@ -41,12 +42,75 @@ header h1 {
 }
 
 main {
+  background-color: var(--primary-color);
   color: var(--primary-color);
-  padding-top: 20vh;
+  padding: 15vh 0;
+}
+
+#question-cards-container {
+  display: flex;
+  flex-direction: column;
+
+  padding: 5vh 5vw;
+}
+
+.question-card {
+  display: flex;
+  flex-direction: column;
+  /* justify-content: center; */
+  align-items: center;
+
+  background-color: var(--secondary-accent-color);
+  margin-bottom: 5vh;
+
+  padding: 3vh 3vw;
+
+  text-align: center;
+
+  border-top-left-radius: 20px;
+  border-bottom-right-radius: 20px;
+}
+
+.question-card h2 {
+  background-color: white;
+  padding: 4vh 4vw;
+  margin: 2vh 2vw;
+}
+
+article * {
+  margin: 2vh 0;
+}
+
+article button {
+  padding: 1vh 1vw;
+  background-color: var(--primary-accent-color);
+  /* color: var(--secondary-accent-color); */
+  color: white;
+}
+
+article p.answer {
+  font-size: 1.5rem;
+  padding: 3vh 3vw;
+  background-color: white;
+  /* border-radius: 20%; */
+  border-radius: 20px;
+  border-bottom-left-radius: 0;
+}
+
+article span.category-tag {
+  font-size: 0.75rem;
+  /* background-color: var(--primary-color); */
+  background-color: #ccc;
+  /* color: var(--secondary-accent-color); */
+  color: var(--primary-color);
+  padding: 1vh 1vw;
+  border-radius: 2px;
+  /* opacity: 0.5; */
 }
 
 footer {
   position: fixed;
+  z-index: 1;
   bottom: 0;
 
   display: flex;
