--- a/styles.css
+++ b/styles.css
@@ -152,40 +152,40 @@ footer li {
   /* padding: 0; */
 
   /* width: 100%; */
-  /* height: 100%; */
+  height: 100%;
+  /* vertical-align: middle; */
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  min-width: 75px;
 }
 
-/* obsolet */
-footer ul img {
-  /* width: 25%;
-  min-width: 25px;
-  /* height: 25%; */
-  /* outline: yellow 2px solid; */
+footer li a {
+  height: 100%;
+  min-width: 75px;
+
+  text-align: center;
+  /* vertical-align: middle; */
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+footer [class^="fa-"] {
+  font-size: 2rem;
+  color: var(--secondary-accent-color);
+  /* padding: 0 1rem; */
 }
 
 .current {
+  background-color: var(--primary-color);
 }
 
-footer li {
-  /* background-size: 25px; */
-
-  /* min-width: 25px; */
-  /* min-height: 25px; */
-
-  /* text-align: center; */
-  /* vertical-align: middle; */
-
-  /* padding-top: 5vh; */
-
-  /* color: white; */
-  /* background-color: white; */
-
-  /* object-fit: cover; */
-}
-
-[class^="fa-"] {
-  font-size: 2rem;
-  color: var(--secondary-accent-color);
+.current [class^="fa-"] {
+  color: var(--secondary-color);
 }
 
 .btn-home {
