--- a/styles.css
+++ b/styles.css
@@ -31,21 +31,29 @@ header {
   display: flex; /* combined with childs margin: auto; centers title */
 
   width: 100%;
-  height: 15vh;
+  /* height: 15vh; */
   min-height: 5rem;
   background-color: var(--secondary-color);
   font-weight: bold;
   color: white;
+
+  /* margin-bottom: 5rem; */
 }
 
 header h1 {
   margin: auto;
   text-align: center;
+  padding: 1rem;
+  /* width: 90%; */
+  font-size: min(2rem, 8vw);
+  /* font-size: max(1rem); */
 }
 
 main {
   color: var(--primary-color);
-  margin: 20vh 0;
+  /* margin: 20% 0 15vh; */
+  margin: max(5rem, 20vh) 0 15vh;
+
   /* padding: 15vh 0; */
 }
 
