--- a/styles.css
+++ b/styles.css
@@ -220,11 +220,12 @@ footer [class^="fa-"] {
 }
 
 .current {
-  background-color: var(--primary-color);
+  /* background-color: var(--primary-color); */
+  background-color: var(--secondary-color);
 }
 
 .current [class^="fa-"] {
-  color: var(--secondary-color);
+  /* color: var(--secondary-color); */
 }
 
 .btn-home {
