--- a/styles.css
+++ b/styles.css
@@ -167,6 +167,7 @@ footer {
   width: 100%;
   height: 15vh;
   min-height: 3rem;
+  max-height: 5rem;
   color: var(--secondary-accent-color);
 }
 
