--- a/styles.css
+++ b/styles.css
@@ -175,6 +175,7 @@ footer {
   min-height: 3rem;
   max-height: 5rem;
   color: var(--secondary-accent-color);
+
 }
 
 nav {
@@ -203,21 +204,22 @@ footer li {
   /* width: 100%; */
   height: 100%;
   /* vertical-align: middle; */
-
+  
   display: flex;
   align-items: center;
   justify-content: center;
-
+  
   min-width: 75px;
 }
 
 footer li a {
   height: 100%;
   min-width: 75px;
-
+  
   text-align: center;
   /* vertical-align: middle; */
-
+  text-decoration: none;
+  
   display: flex;
   align-items: center;
   justify-content: center;
