--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@
   margin: 0;
   padding: 0;
 
-  /* outline: 2px dashed red; */
+  outline: 2px dashed red;
 }
 
 html {
@@ -63,7 +63,8 @@ main {
   /* padding: 15vh 0; */
 }
 
-section#question-cards-container {
+section#question-cards-container,
+section#profile-card-container {
   /* position: relative; */
 
   display: flex;
@@ -72,7 +73,8 @@ section#question-cards-container {
   padding: 5vh 5vw;
 }
 
-article.question-card {
+article.question-card,
+#profile-card {
   position: relative;
 
   display: flex;
@@ -237,4 +239,128 @@ footer [class^="fa-"] {
 
 footer li[class^="btn-"]:hover {
   background-color: var(--primary-color)
+}
+
+
+
+/* Profile */
+
+#profile-container {
+  width: 90%;
+}
+
+#profile {
+  /* display: flex; */
+  /* margin-bottom: 10000px; */
+
+}
+
+#profile > div {
+  margin-bottom: 5vh;
+}
+
+#stats [class^="fa-"] {
+  position: unset;
+  /* color: blue; */
+  font-size: 1rem;
+  margin-right: 1rem;
+  /* padding: 0; */
+  /* color: var(--secondary-accent-color); */
+  /* padding: 0 1rem; */
+}
+
+#stats a,
+#stats span {
+  /* padding: 0; */
+  margin: unset;
+}
+
+[class^="counter"] {
+  /* padding: 0.1rem; */
+}
+
+
+
+#user,
+#stats,
+#settings-container,
+[class^="counter"] {
+  /* vertical-align: middle; */
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+#profile-container img {
+  height: 100px;
+  width: 100px;
+  /* object-fit: cover; */
+  border-radius: 50%;
+  /* margin-left: 25px; */
+}
+
+
+/* Switch */
+/* https://www.w3schools.com/howto/howto_css_switch.asp */
+/* The switch - the box around the slider */
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 60px;
+  height: 34px;
+}
+
+/* Hide default HTML checkbox */
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+/* The slider */
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 26px;
+  width: 26px;
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+input:checked + .slider {
+  background-color: var(--secondary-color);
+}
+
+input:focus + .slider {
+  box-shadow: 0 0 1px var(--secondary-color);
+}
+
+input:checked + .slider:before {
+  -webkit-transform: translateX(26px);
+  -ms-transform: translateX(26px);
+  transform: translateX(26px);
+}
+
+/* Rounded sliders */
+.slider.round {
+  border-radius: 34px;
+}
+
+.slider.round:before {
+  border-radius: 50%;
 }
