--- a/styles.css
+++ b/styles.css
@@ -350,6 +350,8 @@ input:checked + .slider:before {
 /* Rounded sliders */
 .slider.round {
   border-radius: 34px;
+
+  margin: 0;
 }
 
 .slider.round:before {
