finish show and hide answer functionality

--- a/css/root.css
+++ b/css/root.css
@@ -3,6 +3,7 @@
   --secondary-color: #be3144;
   --primary-accent-color: #45567d;
   --secondary-accent-color: blanchedalmond;
+  --secondary-active-color: crimson;
   --white: white;
 
   --move-up-and-down: MoveUpAndDown 2s linear infinite;
