--- a/styles.css
+++ b/styles.css
@@ -128,6 +128,10 @@ article button:hover {
   animation: var(--move-up-and-down);
 }
 
+article button:active {
+  background-color: var(--secondary-active-color);
+}
+
 article p.answer {
   font-size: 1.5rem;
   width: 80%;
@@ -372,6 +376,6 @@ input:checked + .slider:before {
 }
 
 .hidden {
-  visibility: hidden;
+  /* visibility: hidden; */
   display: none;
 }
