--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,5 @@
 @import url("./css/root.css");
+@import url("./css/form.css");
 
 * {
   box-sizing: border-box;
@@ -140,7 +141,8 @@ article button:hover {
   animation: var(--move-up-and-down);
 }
 
-article button:active {
+article button:active,
+nav li:active {
   background-color: var(--secondary-active-color);
 }
 
