--- a/styles.css
+++ b/styles.css
@@ -133,11 +133,18 @@ article button {
   color: var(--white);
   font-weight: bold;
   font-size: 1.4rem;
+
+  /* try to make the animation ease out on de-hover*/
+
+  /* works, but animation stops anywhere... */
+  /* animation: var(--move-up-and-down);
+  animation-play-state: paused; */
 }
 
 article button:hover {
   background-color: var(--secondary-color);
   cursor: pointer;
+
   animation: var(--move-up-and-down);
 }
 
